--- a/OPE-app2.0/frontend/src/app/components/about/about.component.html
+++ b/OPE-app2.0/frontend/src/app/components/about/about.component.html
@@ -2,115 +2,115 @@
     <div class="background">
       <div class="logo"></div>
     </div>
-
+  
     <div class="msic">
+  
+      <div id="flexbox1">
+        <div class="box">
+          <h1 class="title1">About MSIC</h1>
+          <p class="paragraph1">Welcome to our thesis software page! We are a group of students who have developed this software as part of our thesis project.</p>
+        </div>
+  
+        <div>
+          <img src="https://i.imgur.com/JO5pBmE.png" alt="coding" class="image1">
+        </div>
+      </div>
+  
       <div class="box">
-        <h1 class="title1">About MSIC</h1>
-        <p class="paragraph1">Welcome to our thesis software page! We are a group of students who have developed this software as part of our thesis project.</p>
-    </div>
-
-    <div class="box">
-    <img src="https://i.imgur.com/JO5pBmE.png" alt="coding" class="image1">
-    </div>
-
-
-
-    <div class="box">
-    <div class="container">
-        <div class="section-title">
+        <div class="container">
+          <div class="section-title">
             <h1>MSIC</h1>
+          </div>
+  
+          <div class="row">
+            <div class="column">
+              <div class="team">
+                <div class="team-img">
+                  <img src="img/team-1.jpg" alt="Martin">
+                </div>
+                <div class="team-content">
+                  <h2>Martin</h2>
+                  <h3>Lead Programmer</h3>
+                  <p>Some text goes here that describes about team members</p>
+                  <h4>abc@gmail.com</h4>
+                </div>
+                <div class="team-social">
+                  <a href="https://www.facebook.com/martin.juan.16" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                  <a href="https://www.linkedin.com/in/martin-stephen-juan-5189a7121/" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="column">
+              <div class="team">
+                <div class="team-img">
+                  <img src="" alt="Stephen">
+                </div>
+                <div class="team-content">
+                  <h2>Stephen</h2>
+                  <h3>UI/UX</h3>
+                  <p>Some text goes here that describes about team members</p>
+                  <h4>abc@gmail.com</h4>
+                </div>
+                <div class="team-social">
+                  <a href="https://www.facebook.com/toshio.yuki320" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                  <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="column">
+              <div class="team">
+                <div class="team-img">
+                  <img src="" alt="Isaack">
+                </div>
+                <div class="team-content">
+                  <h2>Isaack</h2>
+                  <h3>UI/UX</h3>
+                  <p>Some text goes here that describes about team members</p>
+                  <h4>abc@gmail.com</h4>
+                </div>
+                <div class="team-social">
+                  <a href="https://www.facebook.com/isaack.panganiban" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                  <a href="https://www.linkedin.com/in/joseah-isaack-panganiban-61773b25b/" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                </div>
+              </div>
+            </div>
+  
+            <div class="column">
+              <div class="team">
+                <div class="team-img">
+                  <img src="" alt="Craig">
+                </div>
+                <div class="team-content">
+                  <h2>Craig</h2>
+                  <h3>Project Manager</h3>
+                  <p>Some text goes here that describes about team members</p>
+                  <h4>abc@gmail.com</h4>
+                </div>
+                <div class="team-social">
+                  <a href="https://www.facebook.com/pengriffey911" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
+                  <a href="https://www.linkedin.com/in/craig-gregorio-a13001267/" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-
-        <div class="row">
-
-
-            <div class="column">
-                <div class="team">
-                    <div class="team-img">
-                        <img src="img/team-1.jpg" alt="Martin">
-                    </div>
-                    <div class="team-content">
-                        <h2>Martin</h2>
-                        <h3>Lead Programmer</h3>
-                        <p>Some text goes here that describes about team members</p>
-                        <h4>abc@gmail.com</h4>
-                    </div>
-                    <div class="team-social">
-                        <a href="https://www.facebook.com/martin.juan.16" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.linkedin.com/in/martin-stephen-juan-5189a7121/" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="team">
-                    <div class="team-img">
-                        <img src="" alt="Stephen">
-                    </div>
-                    <div class="team-content">
-                        <h2>Stephen</h2>
-                        <h3>UI/UX</h3>
-                        <p>Some text goes here that describes about team members</p>
-                        <h4>abc@gmail.com</h4>
-                    </div>
-                    <div class="team-social">
-                        <a href="https://www.facebook.com/toshio.yuki320" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
-                        <a href="#" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="team">
-                    <div class="team-img">
-                        <img src="" alt="Isaack">
-                    </div>
-                    <div class="team-content">
-                        <h2>Isaack</h2>
-                        <h3>UI/UX</h3>
-                        <p>Some text goes here that describes about team members</p>
-                        <h4>abc@gmail.com</h4>
-                    </div>
-                    <div class="team-social">
-                        <a href="https://www.facebook.com/isaack.panganiban" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.linkedin.com/in/joseah-isaack-panganiban-61773b25b/" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-            </div>
-
-            <div class="column">
-                <div class="team">
-                    <div class="team-img">
-                        <img src="" alt="Craig">
-                    </div>
-                    <div class="team-content">
-                        <h2>Craig</h2>
-                        <h3>Project Manager</h3>
-                        <p>Some text goes here that describes about team members</p>
-                        <h4>abc@gmail.com</h4>
-                    </div>
-                    <div class="team-social">
-                        <a href="https://www.facebook.com/pengriffey911" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
-                        <a href="https://www.linkedin.com/in/craig-gregorio-a13001267/" class="social-li"> <i class="fab fa-linkedin-in"></i></a>
-                    </div>
-                </div>
-            </div>
-        </div>
+      </div>
     </div>
-</div>
-
-
-    <div class="ope">
+  
+    <div id="flexbox2">
+      <div class="ope">
         <div class="box">
           <h1 class="title2">About OPE</h1>
           <p class="paragraph2">We use Naive Bayes and Aspect Extraction models to analyze customer reviews of products. These models help us identify the aspects that customers care about the most and the sentiment associated with each aspect. Based on this information, we provide a comprehensive evaluation of the product that includes a breakdown of its strengths and weaknesses.</p>
+        </div>
       </div>
-    </div>  
-
-    <div class="box">
-    <img src="https://i.imgur.com/ZdK5RMs.png" alt="coding" class="image2">
-    </div>
-</div>
-  </mat-card>
   
+      <div>
+        <img src="https://i.imgur.com/ZdK5RMs.png" alt="coding" class="image2">
+      </div>
+    </div>
+  
+  </mat-card>
   
