--- a/OPE-app2.0/frontend/src/app/components/how-it-works/how-it-works.component.html
+++ b/OPE-app2.0/frontend/src/app/components/how-it-works/how-it-works.component.html
@@ -1,28 +1,32 @@
 <mat-card>
-    <div class="background">
-      <div class="logo"></div>
-    </div>
-    <div class="container">
-    
-        <div class="hiw">
-            <div class="box">
-              <h1 class="title1">How it Works</h1>
-              <p class="paragraph1">We use Naive Bayes and Aspect Extraction models to analyze customer reviews of products. These models help us identify the aspects that customers care about the most and the sentiment associated with each aspect. Based on this information, we provide a comprehensive evaluation of the product that includes a breakdown of its strengths and weaknesses.</p>
-          </div>
-        </div>
-
+  <div class="background">
+    <div class="logo"></div>
+  </div>
+  <div class="container">
+    <div id="flexbox3">
+      <div class="hiw">
         <div class="box">
-        <img src="https://i.imgur.com/LsqeOMP.gif" alt="programmer" class="imagee">
+          <h1 class="title1">How it Works</h1>
+          <p class="paragraph1">We use Naive Bayes and Aspect Extraction models to analyze customer reviews of products. These models help us identify the aspects that customers care about the most and the sentiment associated with each aspect. Based on this information, we provide a comprehensive evaluation of the product that includes a breakdown of its strengths and weaknesses.</p>
+        </div>
       </div>
 
-
-        <div class="demo">
-            <div class="box">
-              <h1 class="title2">Demo</h1>
-              <p class="paragraph2">Check out our software thesis in action:</p>
-              <iframe class="youtube-player" width="560" height="315" src="https://www.youtube.com/embed/ImT6T0YjVPc" frameborder="0" allowfullscreen></iframe>
-            </div>
-          </div>
-  
+      <div>
+        <img src="https://i.imgur.com/LsqeOMP.gif" alt="programmer" class="imagee">
+      </div>
     </div>
-  </mat-card>
+
+    <div id="flexbox4">
+      <div class="demo">
+        <div class="box">
+          <h1 class="title2">Demo</h1>
+          <p class="paragraph2">Check out our software thesis in action:</p>
+        </div>
+      </div>
+
+      <div>
+        <iframe class="youtube-player" width="560" height="315" src="https://www.youtube.com/embed/ImT6T0YjVPc" frameborder="0" allowfullscreen></iframe>
+      </div>
+    </div>
+  </div>
+</mat-card>
