--- a/OPE-app2.0/frontend/src/app/components/about/about.component.css
+++ b/OPE-app2.0/frontend/src/app/components/about/about.component.css
@@ -1,4 +1,13 @@
-:host {
+#flexbox1 {
+    display: flex;
+  }
+  
+  #flexbox2 {
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  
+  :host {
     display: block;
     height: 100%;
   }
@@ -16,8 +25,8 @@
     z-index: -1;
   }
   
-  
-  html, body {
+  html,
+  body {
     margin: 0;
     padding: 0;
   }
@@ -30,7 +39,7 @@
     margin: 50px auto;
     width: 80%;
     max-width: 1000px;
-    animation: fadeIn 1s ease-in-out; 
+    animation: fadeIn 1s ease-in-out;
   }
   
   @keyframes fadeIn {
@@ -41,32 +50,45 @@
       opacity: 1;
     }
   }
-
-.msic{
-    transform: translate(-20%, -5%);
-}
-
-.image1{
-    width: 500px;
-    height: auto;
-    transform: translateX(210%);
-    margin-top: -300px;
+  
+  .msic {
   }
   
-
-
-.ope{
-    transform: translate(40%, 70%);
-}
-
-.image2{
+  .image1 {
     width: 500px;
     height: auto;
-    transform: translateX(10%);
-    margin-top: -200px;
+    animation: fadeIn 1s ease-in-out;
   }
   
- .title1 {
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  .ope {
+  }
+  
+  .image2 {
+    width: 500px;
+    height: auto;
+    /* margin-top: -200px; */
+    animation: fadeIn 1s ease-in-out;
+  }
+  
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
+  .title1 {
     font-family: Arial, sans-serif;
     font-size: 42px;
     font-weight: bold;
@@ -75,7 +97,7 @@
     text-align: left;
     color: #90c1d7;
   }
-
+  
   .title2 {
     font-family: Arial, sans-serif;
     font-size: 42px;
@@ -84,7 +106,7 @@
     margin-bottom: 20px;
     text-align: right;
     color: #90c1d7;
-  } 
+  }
   
   .paragraph1 {
     font-family: Arial, sans-serif;
@@ -93,7 +115,7 @@
     line-height: 1.5;
     text-align: justify;
   }
-
+  
   .paragraph2 {
     font-family: Arial, sans-serif;
     font-size: 20px;
@@ -101,251 +123,263 @@
     line-height: 1.5;
     text-align: justify;
   }
-
-    
-    *,
-    *::before,
-    *::after{
-        box-sizing: border-box;
-    }
-    html{
-        font-family: sans-serif;
-        line-height: 1.15;
-    }
-    body{
-        font-family: 'lato', sans-serif;
-        color: #454545;
-        font-weight: 300;
-        background: #ffffff;
-    }
-    a{
-        color: #333333;
-        font-weight: 400;
-        outline: none;
-        text-decoration: none;
-        transition: 0.5s;
-    }
-    a:hover,
-    a:focus{
-        outline: none;
-        text-decoration: none;
-    }
-    p{
-        padding: 0;
-        margin: 0 0 15px 0;
-        color: #454545;
-        font-weight: 300;
-    }
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6{
-        padding: 0;
-        margin: 0 0 15px 0;
-        color: #333333;
-        font-weight: 700;
-    }
-    img{
-        width: 100%;
-        height: auto;
-    }
-    .container{
-        transform: translate(30%, 20%);
-        width: 100%;
-        padding-right: 15px;
-        padding-left: 15px;
-        margin-right: auto;
-        margin-left: auto;
-    }
-    .section-title{
-        font-size: 42px;
-        font-weight: bold;
-        margin-top: 50px;
-        margin-bottom: 20px;
-        text-align: center;
-        color: #90c1d7;
-
-    }
-    .section-title h1{
-        display: inline-block;
-        font-size: 35px;
-        text-transform: uppercase;
-        transform: translateY(-100%);
-        font-weight: 700;
-        margin: 0 0 5px;
-        position: relative;
-        color: #90c1d7;
-    }
-    /* .section-title h1::before{
-        content: '';
-        left: 0;
-        position: absolute;
-        height: 3px;
-        right: 32%;
-        background-color: #50c5fc;
-        bottom: -5px;
-
-    } */
-    .container .section-title h1::before{
-        left: 30%;
-    }
-    .row{
-        display: flex;
-        flex-wrap: wrap;
-        margin-right: -15px;
-        margin-left: -15px;
-    }
-    .column{
-        position: relative;
-        width: 100%;
-        padding-right: 15px;
-        padding-left: 15px;
-        flex: 0 0 100%;
-        max-width: 100%;
-    }
-    .team{
-        margin-bottom:30px ;
-    }
-    .team .team-img{
-        position: relative;
-        font-size: 0;
-        text-align: center;
-    }
-    .team .team-img img{
-        width: 160px;
-        height: auto;
-        border-radius: 100%;
-        border: 20px solid #f3f4fa;
-    }
-
-    .team .team-content{
-        padding: 80px 20px 20px 20px;
-        margin-top: -80px;
-        text-align: center;
-        background: #f3f4fa;
-        border-radius: 10px;
-    }
-    .team .team-content h2{
+  
+  *,
+  *::before,
+  *::after {
+    box-sizing: border-box;
+  }
+  
+  html {
+    font-family: sans-serif;
+    line-height: 1.15;
+  }
+  
+  body {
+    font-family: 'lato', sans-serif;
+    color: #454545;
+    font-weight: 300;
+    background: #ffffff;
+  }
+  
+  a {
+    color: #333333;
+    font-weight: 400;
+    outline: none;
+    text-decoration: none;
+    transition: 0.5s;
+  }
+  
+  a:hover,
+  a:focus {
+    outline: none;
+    text-decoration: none;
+  }
+  
+  p {
+    padding: 0;
+    margin: 0 0 15px 0;
+    color: #454545;
+    font-weight: 300;
+  }
+  
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    padding: 0;
+    margin: 0 0 15px 0;
+    color: #333333;
+    font-weight: 700;
+  }
+  
+  img {
+    width: 100%;
+    height: auto;
+  }
+  
+  .container {
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  
+  .section-title {
+    font-size: 42px;
+    font-weight: bold;
+    margin-top: 50px;
+    margin-bottom: 20px;
+    text-align: center;
+    color: #90c1d7;
+  }
+  
+  .section-title h1 {
+    display: inline-block;
+    font-size: 35px;
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 0 0 5px;
+    position: relative;
+    color: #90c1d7;
+  }
+  
+  .container .section-title h1::before {
+    left: 30%;
+  }
+  
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+  }
+  
+  .column {
+    position: relative;
+    width: 100%;
+    padding-right: 15px;
+    padding-left: 15px;
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+  
+  .team {
+    margin-bottom: 30px;
+  }
+  
+  .team .team-img {
+    position: relative;
+    font-size: 0;
+    text-align: center;
+  }
+  
+  .team .team-img img {
+    width: 160px;
+    height: auto;
+    border-radius: 100%;
+    border: 20px solid #f3f4fa;
+  }
+  
+  .team .team-content {
+    padding: 80px 20px 20px 20px;
+    margin-top: -80px;
+    text-align: center;
+    background: #f3f4fa;
+    border-radius: 10px;
+  }
+  
+  .team .team-content h2 {
     font-size: 25px;
     font-weight: 400;
     letter-spacing: 2px;
-    }
-    .team .team-content h3{
-        font-size: 16px;
-        font-weight: 300;
-    }
-    .team .team-content h4{
-        font-size: 16px;
+  }
+  
+  .team .team-content h3 {
+    font-size: 16px;
+    font-weight: 300;
+  }
+  
+  .team .team-content h4 {
+    font-size: 16px;
     font-weight: 300;
     letter-spacing: 1px;
     font-style: italic;
     margin-bottom: 0;
-    }
-    .team .team-content p{
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 22px;
-    }
-    .team .team-social{
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        padding: 35px;
-        top: 0;
-        left:0;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        background: rgba(255, 255, 255, .6);
-        transition: all .3s;
-        font-size: 0;
-        z-index: 1;
-        opacity: 0;
-    }
-    .team:hover .team-social{
-        opacity: 1;
-    }
-    .team .team-social a{
-        display: inline-block;
-        width: 40px;
-        height: 40px;
-        margin-right:5px ;
-        padding: 11px 0 10px 0;
-        font-size: 16px;
-        font-weight: 300;
-        line-height: 16px;
-        text-align: center;
-        color: #ffffff;
-        border-radius: 10px;
-        transition: all .3s;
-        margin-top: 50px;
-    }
-    .team .team-social a.social-tw{
-        background: #00acee;
-    }
-    .team .team-social a.social-fb{
-        background: #3b5998;
-    }
-    .team .team-social a.social-li{
-        background: #0e76a8;
-    }
-    .team .team-social a.social-in{
-        background: #3f729b;
-    }
-    .team .team-social a.social-yt{
-        background: #c4302b;
-    }
-    .team .team-social a:last-child{
-        margin-right: 0;
-    }
-    .team:hover .team-social a{
-        margin-top: 0;
-    }
-    .team .team-social a:hover{
-        background: #222222;
-    }
-
-
-    /* Mobile Responsive */
-
-    @media (min-width: 576px){
-        .container{
-            max-width: 540px;
-        }
-        .column{
-            max-width: 50%;
-        }
-    }
-    @media (min-width: 768px){
-        .container{
-            max-width: 720px;
-        }
-        .column{
-            max-width: 33.333333%;
-        }
-    }
-    @media (min-width: 992px){
-        .container{
-            max-width: 960px;
-        }
-        .column{
-            max-width: 25%;
-        }
-    }
-    @media (min-width: 1200px){
-        .container{
-            max-width: 1140px;
-        }
-    
-    }
-
-
-
+  }
   
+  .team .team-content p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
+  }
   
-
+  .team .team-social {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    padding: 35px;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: rgba(255, 255, 255, 0.6);
+    transition: all 0.3s;
+    font-size: 0;
+    z-index: 1;
+    opacity: 0;
+  }
+  
+  .team:hover .team-social {
+    opacity: 1;
+  }
+  
+  .team .team-social a {
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    margin-right: 5px;
+    padding: 11px 0 10px 0;
+    font-size: 16px;
+    font-weight: 300;
+    line-height: 16px;
+    text-align: center;
+    color: #ffffff;
+    border-radius: 10px;
+    transition: all 0.3s;
+    margin-top: 50px;
+  }
+  
+  .team .team-social a.social-tw {
+    background: #00acee;
+  }
+  
+  .team .team-social a.social-fb {
+    background: #3b5998;
+  }
+  
+  .team .team-social a.social-li {
+    background: #0e76a8;
+  }
+  
+  .team .team-social a.social-in {
+    background: #3f729b;
+  }
+  
+  .team .team-social a.social-yt {
+    background: #c4302b;
+  }
+  
+  .team .team-social a:last-child {
+    margin-right: 0;
+  }
+  
+  .team:hover .team-social a {
+    margin-top: 0;
+  }
+  
+  .team .team-social a:hover {
+    background: #222222;
+  }
+  
+  /* Mobile Responsive */
+  
+  @media (min-width: 576px) {
+    .container {
+      max-width: 540px;
+    }
+    .column {
+      max-width: 50%;
+    }
+  }
+  
+  @media (min-width: 768px) {
+    .container {
+      max-width: 720px;
+    }
+    .column {
+      max-width: 33.333333%;
+    }
+  }
+  
+  @media (min-width: 992px) {
+    .container {
+      max-width: 960px;
+    }
+    .column {
+      max-width: 25%;
+    }
+  }
+  
+  @media (min-width: 1200px) {
+    .container {
+      max-width: 1140px;
+    }
+  }
   
   /* a {
     font-size: 18px;
@@ -369,7 +403,9 @@
   } */
   
   .mat-mdc-card {
-    box-shadow: 0px 2px 1px -1px rgba(255, 255, 255, 0), 0px 1px 1px 0px rgba(255, 255, 255, 0), 0px 1px 3px 0px rgba(255, 255, 255, 0);
+    box-shadow: 0px 2px 1px -1px rgba(255, 255, 255, 0),
+      0px 1px 1px 0px rgba(255, 255, 255, 0),
+      0px 1px 3px 0px rgba(255, 255, 255, 0);
     --mdc-elevated-card-container-color: transparent;
   }
   
@@ -379,3 +415,4 @@
       margin: 20px auto;
     }
   }
+  
