--- a/OPE-app2.0/frontend/src/app/components/otp/otp.component.html
+++ b/OPE-app2.0/frontend/src/app/components/otp/otp.component.html
@@ -1,23 +1,29 @@
 <div class="background"></div>
-  <head>
-   <title>OTP Verification Form</title>
-  </head>
-  <body>
-    <div class="container">
-      <header>
-        <i class="bx bxs-check-shield"></i>
-      </header>
-      <h4>Enter OTP Code</h4>
-      <form action="#">
-        <div class="input-field">
-            <input type="number" />
-            <input type="number" disabled />
-            <input type="number" disabled />
-            <input type="number" disabled />
-            <input type="number" disabled />
-            <input type="number" disabled />
-          </div>          
-        <button>Verify OTP</button>
-      </form>
-    </div>
-  </body>
+<head>
+  <title>OTP Verification Form</title>
+</head>
+
+<body>
+  <div class="container">
+    <header>
+      <i class="bx bxs-check-shield"></i>
+    </header>
+    <h4>OTP VERIFICATION</h4>
+    <p>Enter the verification code we sent to your email</p> <!-- New line -->
+    <form action="#">
+      <div class="input-field">
+        <input type="number" />
+        <input type="number" disabled />
+        <input type="number" disabled />
+        <input type="number" disabled />
+        <input type="number" disabled />
+        <input type="number" disabled />
+      </div>
+      <small>
+        Didn't get the OTP?
+        <a href="#" class="text-decoration-none">Resend</a>
+      </small>
+      <button>Verify OTP</button>
+    </form>
+  </div>
+</body>
