change { path: "", component: AboutComponent },

--- a/OPE-app2.0/frontend/src/app/components/otp/otp.component.html
+++ b/OPE-app2.0/frontend/src/app/components/otp/otp.component.html
@@ -9,7 +9,7 @@
       <i class="bx bxs-check-shield"></i>
     </header>
     <h4>OTP VERIFICATION</h4>
-    <p>Enter the verification code we sent to your email</p> <!-- New line -->
+    <p>Enter the verification code we sent to your email</p>
     <form action="#">
       <div class="input-field">
         <input type="number" />
