rewired signup to work with /otp component with design

--- a/OPE-app2.0/frontend/src/app/components/otp-success/otp-success.component.html
+++ b/OPE-app2.0/frontend/src/app/components/otp-success/otp-success.component.html
@@ -7,6 +7,6 @@
         <div>
             Please go back to our Login page to continue
         </div>
-        <button mat-raised-button type="button" (click)="GoBacktoLogin()"></button>
+        <button mat-raised-button type="button" (click)="GoBacktoLogin()">Login</button>
     </div>
 </body>
