--- a/OPE-app2.0/frontend/src/app/components/otp/otp.component.css
+++ b/OPE-app2.0/frontend/src/app/components/otp/otp.component.css
@@ -22,7 +22,7 @@
 body {
   min-height: 100vh;
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   background: #ffffff00;
 }
@@ -34,10 +34,11 @@ body {
 }
 .container {
   background: #fff;
+  margin-top: 200px;
   padding: 30px 65px;
   border-radius: 12px;
   row-gap: 20px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 0px 3px 2px rgba(0, 0, 0, 0.1);
 }
 .container header {
   height: 65px;
@@ -111,6 +112,12 @@ form button {
   pointer-events: none;
   background: #6e93f700;
   transition: all 0.2s ease;
+}
+form button.active.invalid {
+  background: #f44336 !important;
+}
+form .invalid-border{
+  border-color: #f44336 !important;
 }
 form button.active {
   background: #4070f4;
