--- a/OPE-app2.0/frontend/src/app/components/savedeval/savedeval.component.css
+++ b/OPE-app2.0/frontend/src/app/components/savedeval/savedeval.component.css
@@ -38,8 +38,10 @@
 .main-body {
     background-color: white;
     padding: 20px 50px;
+    margin-bottom: 60px;
     /* min-width: 360px; */
     max-width: 720px;
+    box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 0px 3px 2px rgba(0, 0, 0, 0.1);
 }
 
 .second {
