--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
@@ -1,118 +1,3 @@
-.solid-background {
-  background-color: #fff;
-}
-
-.container {
-    /* display: grid; */
-    padding: 20px;
-    /* grid-template-columns: repeat(auto-fit, minmax(350px, 500px)); */
-    /* grid-gap: 20px; */
-    /* place-content: center; */
-    /* margin-top: 30px; */
-    
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-
-    & > * {
-      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-    }
-  }
-
-#reviews {
-  display: flex;
-  /* justify-content: space-between; */
-  align-items: flex-start;
-  margin-top: 10px;
-
-  & > * {
-    width: 80%; /* set the width of the child elements to 100% */
-  }
-}
-
-
-#label {
-  margin-top: 12px;
-}
-
-#pie_charts {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-}
-
-#counts_bar {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  width: 50%; /* set the width of the container to 50% */
-  margin-top: 20px;
-}
-
-#counts-table th,
-#counts-table td {
-  padding: 10px; /* add some padding to the table cells */
-}
-
-/* .bar {
-  margin-right: 17px;
-} */
-  
-pre {
-  white-space: pre-wrap;
-}
-
-.container h2 {
-  text-transform: uppercase;
-  color: rgb(27, 156, 133);
-}
-
-td.center {
-  padding: 10px;
-  text-align: center;
-}
-
-
-.positive {
-  color: rgb(27, 156, 133);
-}
-
-.negative {
-  color: rgb(255, 99, 132);
-}
-
-table {
-  font-family: arial, sans-serif;
-  border-collapse: collapse;
-  width: 100%;
-}
-
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
-}
-
-th {
-  background-color: #295A70;
-  color: #ffffff;
-}
-
-tr:nth-child(even) {
-  background-color: #f3f3f3;
-}
-
-#reviews > div#label {
-  border-radius: 10px;
-  padding: 15px;
-}
-
-.center-content {
-    place-content: center;
-}
-
 .background {
   position: fixed;
   top: 0;
@@ -124,4 +9,141 @@ tr:nth-child(even) {
   background-size: cover;
   opacity: 0.6;
   z-index: -1;
+}
+
+p {
+  font-size: 1.2em;
+  width: 88%;
+}
+
+#prod-title {
+  margin-left: 30px;
+  background-color: white;
+  border-radius: 5px;
+  margin-right: 30px;
+  padding-top: 10px;
+  padding-left: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font: bold;
+  text-decoration: underline;
+}
+
+#main {
+  position: relative;
+  z-index: 0;
+  background-color: white;
+  border-radius: 5px;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-bottom: 5px;
+  box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.2);
+}
+
+/* .active {
+  text-decoration: underline;
+} */
+
+.navbar {
+  margin-left: 30px;
+  margin-bottom: 15px;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  background-color: #f3f6fc;
+  padding: 10px;
+  margin-right: 10px;
+  width: 47px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+  border-radius: 7px;
+}
+
+.active::after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: black;
+}
+
+#top-aspects-title {
+  margin-bottom: 7px;
+}
+
+#raw-sentiment-score {
+  background-color: #f3f6fc; /* Set the background color to gray */
+  margin-right: 30px;
+  margin-left: 30px;
+  border-radius: 7px;
+  z-index: 1;
+  padding: 10px;
+}
+
+
+#chart-section {
+  background-color: white;
+  width: 96%;
+  margin-left: 10px;
+  margin-top: 10px;
+  z-index: 2;
+  border-radius: 7px;
+  padding: 10px;
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
+}
+
+.highlight {
+  font-size: 1.2em;
+  font-weight: bold;
+}
+
+#frequency-table {
+  font-size: 1.2em; /* Set the font size of the table */
+  border-collapse: collapse; /* Collapse the borders of the table cells */
+}
+
+#frequency-table td {
+  border: 2px solid black; /* Set the border width and color of the table cells */
+  padding: 10px; /* Add some padding to the table cells */
+}
+
+#chart-breakdown {
+  display: flex; /* Set the display property to flex */
+  flex-direction: row; /* Set the direction of the flex container to row */
+  align-items: center; /* Center the items vertically */
+}
+
+#aspect-breakdown-list table {
+  height: 400px;
+  overflow-y: scroll;
+  display: block;
+
+  border-collapse: collapse;
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+
+  background-color: #fff;
+}
+
+#aspect-breakdown-list th, td {
+  text-align: left;
+  padding: 8px 16px;
+}
+
+#review_list {
+  display: flex;
 }
