--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
@@ -1,19 +1,21 @@
 <div class="background"></div>
 
 <div id="main">
-  <div id="prod-title">
-      <h1>{{title}}</h1>
-  </div>
-  <!-- <div>
-    <h1>{{positiveCount}}</h1>
-  </div> -->
-  <div class="navbar">
-    <h1 id="top-aspects-title">6 Most Mentioned Keywords:</h1>
-    <nav>
-      <ul>
-        <li *ngFor="let aspect of top_aspects" (click)="onAspectClick(aspect)" [class.active]="currentAspect === aspect">{{aspect}}</li>
-      </ul>
-    </nav>
+  <div id="top-section">
+    <div id="prod-title">
+        <h1>{{title}}</h1>
+    </div>
+    <div>
+      <h1>{{positiveCount}}</h1>
+    </div>
+    <div class="navbar">
+      <h1 id="top-aspects-title">6 Most Mentioned Keywords:</h1>
+      <nav>
+        <ul>
+          <li *ngFor="let aspect of top_aspects" (click)="onAspectClick(aspect)" [class.active]="currentAspect === aspect">{{aspect}}</li>
+        </ul>
+      </nav>
+    </div>
   </div>
   <div id="raw-sentiment-score" *ngIf="currentAspect">
     <div id="chart-section">
@@ -53,7 +55,7 @@
       <br>
       <div id="review_list" style="display: flex;">
         <div style="flex: 1; margin-right: 10px;">
-          <h2>List of Positive Sentences</h2>
+          <h2>List of Positive Reviews</h2>
           <div id="aspect-breakdown-list">
             <table>
               <tr>
@@ -75,7 +77,7 @@
           </div>
         </div>
         <div style="flex: 1; margin-left: 10px;">
-          <h2>List of Negative Sentences</h2>
+          <h2>List of Negative Reviews</h2>
           <div id="aspect-breakdown-list">
             <table>
               <tr>
@@ -96,7 +98,9 @@
           </div>
         </div>
       </div>
-      
-      
+         
+    </div>
   </div>
-</div>
+</div> 
+
+<div style="display: block; height: 100px;"></div>
