--- a/OPE-app2.0/frontend/src/app/components/about/about.component.html
+++ b/OPE-app2.0/frontend/src/app/components/about/about.component.html
@@ -26,13 +26,13 @@
             <div class="column">
               <div class="team">
                 <div class="team-img">
-                  <img src="img/team-1.jpg" alt="Martin">
+                  <img src="https://i.imgur.com/HCzf1cC.png" alt="Martin">
                 </div>
                 <div class="team-content">
                   <h2>Martin</h2>
                   <h3>Lead Programmer</h3>
-                  <p>Some text goes here that describes about team members</p>
-                  <h4>abc@gmail.com</h4>
+                  <p>Expert programmer leading development and ensuring high-quality code.</p>
+                  <h4>steam.martinjuan@gmail.com</h4>
                 </div>
                 <div class="team-social">
                   <a href="https://www.facebook.com/martin.juan.16" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
@@ -44,13 +44,13 @@
             <div class="column">
               <div class="team">
                 <div class="team-img">
-                  <img src="" alt="Stephen">
+                  <img src="https://i.imgur.com/VwI4hX8.png" alt="Stephen">
                 </div>
                 <div class="team-content">
                   <h2>Stephen</h2>
                   <h3>UI/UX</h3>
-                  <p>Some text goes here that describes about team members</p>
-                  <h4>abc@gmail.com</h4>
+                  <p> Utilizes TypeScript to craft user-friendly interfaces, optimizing the overall user experience.</p>
+                  <h4>stephengustilo320@gmail.com</h4>
                 </div>
                 <div class="team-social">
                   <a href="https://www.facebook.com/toshio.yuki320" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
@@ -62,13 +62,13 @@
             <div class="column">
               <div class="team">
                 <div class="team-img">
-                  <img src="" alt="Isaack">
+                  <img src="https://i.imgur.com/4hIWUCe.png" alt="Isaack">
                 </div>
                 <div class="team-content">
                   <h2>Isaack</h2>
                   <h3>UI/UX</h3>
-                  <p>Some text goes here that describes about team members</p>
-                  <h4>abc@gmail.com</h4>
+                  <p>Creative designer crafting user-friendly interfaces that enhance the user experience.</p>
+                  <h4>isaackpanganiban02@gmail.com</h4>
                 </div>
                 <div class="team-social">
                   <a href="https://www.facebook.com/isaack.panganiban" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
@@ -80,13 +80,13 @@
             <div class="column">
               <div class="team">
                 <div class="team-img">
-                  <img src="" alt="Craig">
+                  <img src="https://i.imgur.com/XoKjcmP.png" alt="Craig">
                 </div>
                 <div class="team-content">
                   <h2>Craig</h2>
                   <h3>Project Manager</h3>
-                  <p>Some text goes here that describes about team members</p>
-                  <h4>abc@gmail.com</h4>
+                  <p>Organizational master overseeing project completion and resource management.</p>
+                  <h4>craiggregorio23@gmail.com</h4>
                 </div>
                 <div class="team-social">
                   <a href="https://www.facebook.com/pengriffey911" class="social-fb"> <i class="fab fa-facebook-f"></i></a>
