--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
@@ -30,6 +30,16 @@ p {
   text-decoration: underline;
 }
 
+#verdict {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#verdict_text {
+  font-size: 1.5em;
+}
+
 #main {
   position: relative;
   z-index: 0;
