--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
@@ -4,9 +4,11 @@
   <div id="prod-title">
       <h1>{{title}}</h1>
   </div>
-  <!-- <div>
-    <h1>{{positiveCount}}</h1>
-  </div> -->
+  <div id="verdict">
+    <h2 id="verdict_text">Product Summary:
+      Based from the reviews, {{formatProbability(positivePercent)}} are positive about this product.
+    </h2>
+  </div>
   <div class="navbar">
     <h1 id="top-aspects-title">6 Most Mentioned Keywords:</h1>
     <nav>
@@ -17,9 +19,10 @@
   </div>
   <div id="raw-sentiment-score" *ngIf="currentAspect">
     <div id="chart-section">
-      <h1>{{ currentAspect | uppercase }}</h1>
-      <h2>Summary of Product Reviews</h2>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla quae blanditiis facere laborum atque. Odit, porro mollitia cum cumque sequi repudiandae velit est accusantium, expedita sint quidem et numquam consequatur.</p>
+      <h1>{{ currentAspect | uppercase }} SUMMARY</h1>
+      <h2>Description</h2>
+      <p>{{summary}}</p>
+      <br>
       <div id="chart-breakdown">
         <div *ngFor="let pieChart of pieCharts | keyvalue">
           <div class="bar" *ngIf="pieChart.key === currentAspect" [chart]="pieChart.value"></div>
