--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.css
@@ -23,7 +23,6 @@ p {
 
 #prod-title {
   margin-left: 30px;
-  background-color: white;
   border-radius: 5px;
   margin-right: 30px;
   padding-top: 10px;
@@ -31,8 +30,18 @@ p {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  color: #90c1d7;
   font: bold;
-  text-decoration: underline;
+}
+
+#prod-title h1 {
+  font-size: xx-large;
+  font-weight: 900;
+  letter-spacing: .1rem;
+  background: -webkit-linear-gradient(#00ffff, #00a1ff);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 #verdict {
@@ -54,6 +63,7 @@ p {
   max-width: 1400px;
   margin: 0 auto 64px auto;
   padding-bottom: 64px;
+  padding-top: 32px;
 }
 
 /* .active {
@@ -63,6 +73,7 @@ p {
 .navbar {
   margin-left: 30px;
   margin-bottom: 15px;
+  margin-top: 24px;
 }
 
 ul {
@@ -117,6 +128,10 @@ li {
   box-shadow: inset 0px 0px 5px 2px rgba(0, 0, 0, 0.1);
 }
 
+#chart-figure {
+  min-width: 50%;
+}
+
 .highlight {
   font-size: 1.2em;
   font-weight: bold;
@@ -139,7 +154,7 @@ li {
 #chart-breakdown {
   display: flex; /* Set the display property to flex */
   flex-direction: row; /* Set the direction of the flex container to row */
-  align-items: center; /* Center the items vertically */
+  align-items: flex-start;
 }
 
 #aspect-breakdown-list table {
