--- a/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
+++ b/OPE-app2.0/frontend/src/app/components/prodeval/prodeval.component.html
@@ -1,13 +1,15 @@
 <div class="background"></div>
 
 <div id="main">
-  <div id="prod-title">
-      <h1>{{title}}</h1>
-  </div>
-  <div id="verdict">
-    <h2 id="verdict_text">Product Summary:
-      Based from the reviews, {{formatProbability(positivePercent)}} are positive about this product.
-    </h2>
+  <div>
+    <div id="prod-title">
+        <h1>{{title}}</h1>
+    </div>
+    <div id="verdict">
+      <h2 id="verdict_text">Product Summary:
+        Based from the reviews, {{formatProbability(positivePercent)}} are positive about this product.
+      </h2>
+    </div>
   </div>
   <div class="navbar">
     <h1 id="top-aspects-title">6 Most Mentioned Keywords:</h1>
@@ -24,8 +26,13 @@
       <p>{{summary}}</p>
       <br>
       <div id="chart-breakdown">
-        <div *ngFor="let pieChart of pieCharts | keyvalue">
-          <div class="bar" *ngIf="pieChart.key === currentAspect" [chart]="pieChart.value"></div>
+        <div id="chart-figure">
+          <h2>Ratio of Positive and Negative Reviews</h2>
+          <div>
+            <div *ngFor="let pieChart of pieCharts | keyvalue">
+              <div class="bar" *ngIf="pieChart.key === currentAspect" [chart]="pieChart.value"></div>
+            </div>
+          </div>
         </div>
         <div id="chart-frequency">
           <h2>How did we calculate the ratio?</h2>
