--- a/OPE-app2.0/frontend/src/styles.css
+++ b/OPE-app2.0/frontend/src/styles.css
@@ -1,7 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~typeface-montserrat';
-
-
+@import url('https://fonts.cdnfonts.com/css/amazon-ember');
+@import url('https://fonts.cdnfonts.com/css/didot-2');
+@import url('https://fonts.cdnfonts.com/css/palatino-lt-black');
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 html, body { height: 100%; }
